#69908 - Settings page for columns to show on Advanced search

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Shared/_MasterDataPanelContent.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Shared/_MasterDataPanelContent.cshtml
@@ -17,6 +17,8 @@
         <li class="line"></li>
         <li class="@Html.ActiveTab(new string[] { "customercaseoverview" })"><a href="@Url.Action("edit", "customercaseoverview", new { id = Model.Id, usergroupId = 1 })">@Translation.GetCoreTextTranslation("Ärendeöversikt")</a></li>
         <li class="line"></li>
+        <li class="@Html.ActiveTab(new string[] { "customeradvancedsearch" })"><a href="@Url.Action("edit", "customeradvancedsearch", new { id = Model.Id })">@Translation.GetCoreTextTranslation("Avancerad sökning")</a></li>
+        <li class="line"></li>
     </ul>
 </li>
 <li class="line"></li>
