#69301 - Focus changes after approx. 2 seconds

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch/_SpecificSearchTab.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch/_SpecificSearchTab.cshtml
@@ -9,7 +9,7 @@
 <div id="SpecificFilterDataPartial">
     <script type="text/javascript">
         window.Params = {
-            DefaultFocusObject: "#btnSearch",
+            autoFocus: false,
             CaseTypeDropDown: "CaseTypeDropDown",
             ProductAreaDropDown: "ProductAreaDropDown",
             ClosingReasonDropDown: "ClosingReasonDropDown"
