--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/NotifierPopup.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/NotifierPopup.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-<div class="container">
+<div class="container" style="width: 650px">
     <div class="tab-content">
         <div class="tab-pane tab-pane-border active" id="fragment-1">
 
