-#69907 - Hide/show columns according to settings for each customer; Fixed messages display;

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -1425,7 +1425,7 @@ table th.thpointer {
     }
 /*.box-post div.textrow ul
 {
-	margin-top:0;
+    margin-top:0;
     margin-bottom:0;
 }*/
 
@@ -1687,9 +1687,7 @@ table th.thpointer {
     margin-left: 0;
 }
 
-.loading-msg,
-.no-data-msg,
-.error-msg {
+.loading-msg {
     display: none;
     background-color: #f9f9f9;
     border: 1px solid #dddddd;
@@ -1704,16 +1702,27 @@ table th.thpointer {
     padding: 10px;
 }
 
+.error-msg,
+.no-data-msg,
 .noavailablefields-msg,
 .nofields-msg {
+    background-color: #f9f9f9;
     border: 1px solid #dddddd;
     display: none;
-    left: 0px;
-    right: 0px;
-    position: absolute;
+    min-height: 0!important;
+    left: 0;
+    right: 0;
     color: gray;
     padding: 10px;
+    overflow: hidden;
+    position: relative;
 }
+
+.search-result-messages .error-msg {
+    border: 1px solid #ff0000 !important;
+    background-color: #ffeeee !important;
+}
+    
 
 #fragment-4 .nofields-msg,
 #fragment-4 .noavailablefields-msg {
@@ -2561,7 +2570,7 @@ h4 {
     filter: alpha(opacity=100);
 }
 /* sliding resizer - add 'outside-border' to resizer on-hover 
-		 * this sample illustrates how to target specific panes and states */
+         * this sample illustrates how to target specific panes and states */
 .ui-layout-resizer-north-sliding-hover {
     border-bottom-width: 1px;
 }
@@ -2647,10 +2656,10 @@ h4 {
     /* ta med detta sen... fuckar upp mitt synfält DL
 .ui-layout-west ul li:first-child
 {
-	margin:0 0 0 -40px;
-	padding:5px 0 5px 10px;
-	border-bottom:1px dotted #666;
-	background-image:url(images/bg_menuTop.png);
+    margin:0 0 0 -40px;
+    padding:5px 0 5px 10px;
+    border-bottom:1px dotted #666;
+    background-image:url(images/bg_menuTop.png);
 }*/
 
     .ui-layout-west li:hover {
@@ -2924,30 +2933,30 @@ body.login {
 
 .expand-tree-item {
     /*display: inline-block;
-	width: 14px;
-	height: 14px;
-	margin-top: 1px;
-	*margin-right: .3em;
-	line-height: 14px;
-	vertical-align: text-top;
-	background-image: url("../img/glyphicons-halflings.png");
-	width: 16px;
-	background-position: 0 -96px;
-	background-repeat:no-repeat;*/
+    width: 14px;
+    height: 14px;
+    margin-top: 1px;
+    *margin-right: .3em;
+    line-height: 14px;
+    vertical-align: text-top;
+    background-image: url("../img/glyphicons-halflings.png");
+    width: 16px;
+    background-position: 0 -96px;
+    background-repeat:no-repeat;*/
 }
 
 .collapse-tree-item {
     /*display: inline-block;
-	width: 14px;
-	height: 14px;
-	margin-top: 1px;
-	*margin-right: .3em;
-	line-height: 14px;
-	vertical-align: text-top;
-	background-image: url("../img/glyphicons-halflings.png");
-	width: 16px;
-	background-position: -24px -96px;
-	background-repeat:no-repeat;*/
+    width: 14px;
+    height: 14px;
+    margin-top: 1px;
+    *margin-right: .3em;
+    line-height: 14px;
+    vertical-align: text-top;
+    background-image: url("../img/glyphicons-halflings.png");
+    width: 16px;
+    background-position: -24px -96px;
+    background-repeat:no-repeat;*/
 }
 
 
