-#69907 - Hide/show columns according to settings for each customer; Fixed extended customers search  in Old Advanced Search.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -1723,6 +1723,9 @@ table th.thpointer {
     background-color: #ffeeee !important;
 }
     
+#frmAdvanceSearch .customerSearchResults {
+    margin-bottom: 20px;
+}
 
 #fragment-4 .nofields-msg,
 #fragment-4 .noavailablefields-msg {
