#67159 - Not possible to read all comments for feedback

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -4114,3 +4114,8 @@ div.chosen-container.chosen-container-single.error .chosen-single {
 #tooltip-button-wrapper .btn[disabled] {
     pointer-events: none;
 }
+
+#feedback_notes_popup .fb_content {
+    overflow-y: auto;
+    max-height: 60vh;
+}
