--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Questionnaire/Feedback/FeedbackStatisticsGrid.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Questionnaire/Feedback/FeedbackStatisticsGrid.cshtml
@@ -137,7 +137,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h5>@Translation.GetCoreTextTranslation("Kommentarer")</h5>
             </div>
-            <div class="overflow-visible">
+            <div class="fb_content">
                 <div id="fb_comment_content"></div>
             </div>
             <div class="modal-body overflow-visible">
