#69907 - Hide/show columns according to settings for each customer; Added feature switch;

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch.cshtml
@@ -83,7 +83,7 @@
                 ProductAreaDropDown: "ProductAreaDropDown",
                 ClosingReasonDropDown: "ClosingReasonDropDown", 
                 // page params
-                sortOptions: @Html.SerializeObject(Model.SortOptions),
+                sortOptions: @Html.SerializeObject(Model.GridSettings.sortOptions),
                 doSearchAtBegining: @Model.DoSearchAtBegining.ToJavaScriptObject(),
                 isExtSearch: @Model.IsExtSearch.ToJavaScriptObject(),
                 userCustomers: @Html.SerializeObject(Model.UserCustomers),
