--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/OperationLog/New.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/OperationLog/New.cshtml
@@ -1,15 +1,18 @@
-﻿@using DH.Helpdesk.Web.Infrastructure
-@model DH.Helpdesk.Web.Models.OperationLogInputViewModel
+﻿@model DH.Helpdesk.Web.Models.OperationLogInputViewModel
 @{
     ViewBag.Title = "New";
 }
+
 @using (Html.BeginForm("new", "operationlog", new { id = Model.OperationLog.Id }, FormMethod.Post, new { id = "target" }))
 {
+    HtmlHelper.UnobtrusiveJavaScriptEnabled = false;
+    HtmlHelper.ClientValidationEnabled = false;
+
     <div class="secnavs fixed">
       <div class="pull-left">
         <ul class="secnav">    
-          <li>@Html.ActionLink(Translation.Get("Spara", Enums.TranslationSource.TextTranslation), "new", null, new { onclick = "submitForm();return false;" , @class = "btn" })</li>
-          <li> @Html.ActionLink(Translation.Get("Avbryt", Enums.TranslationSource.TextTranslation), "index",null,new { @class = "btn" }) </li>
+          <li>@Html.ActionLink(Translation.GetCoreTextTranslation("Spara"), "new", null, new { onclick = "submitForm();return false;" , @class = "btn" })</li>
+          <li> @Html.ActionLink(Translation.GetCoreTextTranslation("Avbryt"), "index",null,new { @class = "btn" }) </li>
         </ul>      
       </div>
     </div>
