#65169 Administration - Settings only available for system administrators

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -63,7 +63,7 @@
 
                                 @if (SessionFacade.CurrentUser != null)
                                 {
-                                    if (SessionFacade.CurrentUser.UserGroupId > 2)
+                                    if (SessionFacade.CurrentUser.UserGroupId == 4)
                                     {
 
                                         <li><a href="@Url.Action("index", "globalsetting", new {area = "admin", texttypeid = 0, textSearch = "", compareMethod = 1})">
