#70356 - External log note is shown even if not active in configuration #70357 - log notes (internal & external) are shown even if not active in template

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -1,16 +1,19 @@
 
-<ng-container [formGroup]="form" *ngIf="externalLogField || internalLogField">
-  <mbsc-textarea *ngIf="externalLogField" #external
+<ng-container [formGroup]="form" *ngIf="isExternalLogFieldVisible || isInternalLogFieldVisible">
+  
+  <mbsc-textarea *ngIf="isExternalLogFieldVisible" #external
                 [formControlName]="externalLogField.name">{{ externalLogLabel }}</mbsc-textarea>
 
-  <mbsc-textarea *ngIf="internalLogField" #internal
+  <mbsc-textarea *ngIf="isInternalLogFieldVisible" #internal
                  [formControlName]="internalLogField.name">{{ internalLogLabel }}</mbsc-textarea>
-  
-  <div id="log-files" *ngIf="files && files.length > 0">
-      <mbsc-listview [options]="fileListSettings" class="fileListView">
-          <mbsc-listview-item *ngFor="let file of files;" icon="fa-paperclip">{{ file }}</mbsc-listview-item>
-      </mbsc-listview>
-  </div>
+                   
+  <ng-container *ngIf="isAttachedFilesVisible">
+    <div id="log-files" *ngIf="files && files.length > 0">
+        <mbsc-listview [options]="fileListSettings" class="fileListView">
+            <mbsc-listview-item *ngFor="let file of files;" icon="fa-paperclip">{{ file }}</mbsc-listview-item>
+        </mbsc-listview>
+    </div>
+    <log-files-upload [caseKey]="caseKey" (fileUploaded)="processFileUploaded($event)"></log-files-upload>
+  </ng-container>
 
-  <log-files-upload [caseKey]="caseKey" (fileUploaded)="processFileUploaded($event)"></log-files-upload>
 </ng-container>
